[project]
name = "vortexion"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "devcomfort", email = "im@devcomfort.me" }
]
dependencies = [
    "pyxel>=2.5.10",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=9.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/vortexion"]
